# refactoring-for-testability-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: examples-ci.yml
009-hardcoded_dependencies/: CMakeLists.txt
009-hardcoded_dependencies/include/: DirectionalOdometer.hpp  DirectionlessOdometer.hpp  Encoder.hpp  InterruptServiceManager.hpp  MyInterruptServiceManager.hpp  MyPinReader.hpp  Odometer.hpp  PinReader.hpp  PulsesToMetersEncoder.hpp
009-hardcoded_dependencies/src/: DirectionalOdometer.cpp  DirectionlessOdometer.cpp  MyInterruptServiceManager.cpp
010-files/: CMakeLists.txt
010-files/include/: FileEncoder.hpp  FileReader.hpp  FileWriter.hpp  MyFileReader.hpp  MyFileWriter.hpp
010-files/src/: FileEncoder.cpp  FilesAfter.cpp  FilesBefore.cpp  MyFileReader.cpp  MyFileWriter.cpp
020-hardcoded_dependencies/: CMakeLists.txt
020-hardcoded_dependencies/include/: DirectionalOdometer.hpp  Encoder.hpp  MyInterruptServiceManager.hpp  Odometer.hpp  PinReader.hpp
020-hardcoded_dependencies/src/: HardcodedDependenciesAfter.cpp  HardcodedDependenciesBefore.cpp  MyPinReader.cpp  PulsesToMetersEncoder.cpp
020-third_party/: CMakeLists.txt
020-third_party/include/: CurlDownloader.hpp  Downloader.hpp  PlatisSolutionsBenchmarker.hpp
020-third_party/src/: PlatisSolutionsBenchmarker.cpp
030-third_party/: CMakeLists.txt
030-third_party/include/: Downloader.hpp
030-third_party/src/: ThirdPartyBefore.cpp
030-time/: CMakeLists.txt
030-time/include/: AsynchronousTimer.hpp  InterruptManager.hpp  MyInterruptManager.hpp  MyPinManager.hpp  MyTimeKeeper.hpp  PinManager.hpp  SingleTaskAsynchronousTimer.hpp  TimeKeeper.hpp
030-time/src/: MyInterruptManager.cpp  MyTimeKeeper.cpp  PowerController.cpp
040-new_operators/: CMakeLists.txt
040-new_operators/include/: I2cSensorScanner.hpp  InfraredSensor.hpp  LaserSensor.hpp  MySensorFactory.hpp  Sensor.hpp  SensorFactory.hpp  SensorManager.hpp  SensorScanner.hpp  UltrasonicSensor.hpp
040-new_operators/src/: I2cSensorScanner.cpp  InfraredSensor.cpp  LaserSensor.cpp  MySensorFactory.cpp  NewOperatorsAfter.cpp  NewOperatorsBefore.cpp  SensorManager.cpp  UltrasonicSensor.cpp
050-time/: CMakeLists.txt
050-time/include/: AsynchronousTimer.hpp  MyInterruptManager.hpp  MyTimeKeeper.hpp  PowerController.hpp
050-time/src/: PowerController.cpp
060-law_of_demeter/: CMakeLists.txt
060-law_of_demeter/include/: AsioSerialPortClient.hpp  CommunicationManager.hpp  MyCommunicationManager.hpp  SerialPortClient.hpp  StateBroadcaster.hpp
060-law_of_demeter/src/: DemeterAfter.cpp  DemeterBefore.cpp  MyCommunicationManager.cpp  StateBroadcaster.cpp
070-domain_dependent_on_application/: CMakeLists.txt
070-domain_dependent_on_application/include/: AsioSerialPortClient.hpp  BarSerialFormatter.hpp  CommunicationManager.hpp  FooSerialFormatter.hpp  MyCommunicationManager.hpp  SerialFormatter.hpp
070-domain_dependent_on_application/src/: AsioSerialPortClient.cpp  BarSerialFormatter.cpp  CommunicationManager.cpp  FooSerialFormatter.cpp  MyCommunicationManager.cpp  PlatformAfter.cpp  PlatformBefore.cpp
080-singletons/: CMakeLists.txt
080-singletons/include/: CommonCounter.hpp  Counter.hpp  CounterManager.hpp  CounterSingleton.hpp
080-singletons/src/: CommonCounter.cpp  CounterManager.cpp  CounterSingleton.cpp  SingletonAfter.cpp  SingletonAfterAlternative.cpp  SingletonBefore.cpp
files/: CMakeLists.txt
hardcoded_dependencies/: CMakeLists.txt
law_of_demeter/: CMakeLists.txt
new_operators/: CMakeLists.txt
test/: CMakeLists.txt  CMakeLists.txt.in
test/mocks/: FileReaderMock.hpp  FileWriterMock.hpp  MockAsynchronousTimer.hpp  MockCommunicationManager.hpp  MockCounter.hpp  MockDownloader.hpp  MockEncoder.hpp  MockInterruptManager.hpp  MockInterruptServiceManager.hpp  MockPinManager.hpp  MockPinReader.hpp  MockSensor.hpp  MockSensorFactory.hpp  MockSensorScanner.hpp  MockSerialFormatter.hpp  MockSerialPortClient.hpp  MockTimeKeeper.hpp
test/ut/: CommunicationManager_test.cpp  CounterManager_test.cpp  FileEncoder_test.cpp  Odometers_test.cpp  PlatisSolutionsBenchmarker_test.cpp  PowerController_test.cpp  SensorManager_test.cpp  StateBroadcaster_test.cpp
time/include/: MyPinManager.hpp  PowerController.hpp  TimeKeeper.hpp
time/src/: MyPinManager.cpp  SingleTaskAsynchronousTimer.cpp  TimeAfter.cpp  TimeBefore.cpp
